@@ -85,7 +85,6 @@ $ rails generate shopify_app:install --api_key <your_api_key> --secret <your_app
 Other options include:
 * `scope` - the Oauth access scope required for your app, eg 'read_products, write_orders'. For more information read the [docs](http://docs.shopify.com/api/tutorials/oauth)
 * `embedded` - the default is to generate an [embedded app](http://docs.shopify.com/embedded-app-sdk), if you want a legacy non-embedded app then set this to false, `--embedded false`
-* `redirect_uri` - the default is `http://localhost:3000/auth/shopify/callback` which will allow you to develop locally. You'll need to change it to match your domain for production.
 
 You can update any of these settings later on easily, the arguments are simply for convenience.
 
@@ -128,7 +127,6 @@ The `install` generator places your Api credentials directly into the shopify_ap
 ShopifyApp.configure do |config|
   config.api_key = ENV['SHOPIFY_CLIENT_API_KEY']
   config.secret = ENV['SHOPIFY_CLIENT_API_SECRET']
-  config.redirect_uri = "http://localhost:3000/auth/shopify/callback"
   config.scope = 'read_customers, read_orders, write_products'
   config.embedded_app = true
 end
